# ha-solidgps

./: .gitignore  LICENSE  README.md  hacs.json  pyproject.toml
.github/: release-drafter.yml
.github/workflows/: lint.yml  release-drafter.yml  release.yml  validate-hacs.yml  validate-hassfest.yml
custom_components/solidgps/: __init__.py  api.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  device_tracker.py  entity.py  manifest.json  models.py  sensor.py  strings.json
custom_components/solidgps/translations/: en.json
